dnl#                                               -*- Autoconf -*-
dnl# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([RandomNumberGame],[0.0.1],
        [https://github.com/cooljeanius/RandomNumberGame/issues])
AC_CONFIG_SRCDIR([src/main_randomnumbergame.c])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign subdir-objects])dnl

# Checks for programs.
AC_PROG_CC

# Output.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
